<resources>
    <string name="app_name">DBCC TRACE</string>

    <string name="facebook_app_id">452537079605520</string>
    <string name="fb_login_protocol_scheme">fb452537079605520</string>

    <string name="username">Jp</string>
    <string name="qrcode">QRcode</string>
    <string name="notify">Notify</string>
    <string name="seat">Seat</string>
    <string name="notes">My Notes</string>
    <string name="about_us">About Us</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Sub Title</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="date">date</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>