<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/colorBackground"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:hint="@string/notes_title"
                android:textColor="@color/black"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                />


            <TextView
                android:id="@+id/tvdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                android:hint="@string/notes_desc"
                android:textColor="@color/black"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/futurabookfont"
                />



            <TextView
            android:id="@+id/tvdatetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_9sdp"
            android:hint="@string/date"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/futurabookfont"
            />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>